Resolving Visual Bug on iPhone 11 Again / resolvendo bug visual no Iphone 11 outra vez

--- a/style.css
+++ b/style.css
@@ -449,7 +449,6 @@ body.dark-theme {
 }
 
 .home__social {
-    height: max-content;
     position: absolute;
     left: -3rem;
     top: 0;
